# flext

./: .gitignore  CMakeLists.txt
buildsys/lnx/pd/: config-gcc.def
pd-linux/debug-multi/: libflext-pd_td.a.0.6.2
pd-linux/debug-shared/: libflext-pd_d.so.0.6.2
pd-linux/debug-single/: libflext-pd_sd.a.0.6.2
pd-linux/release-multi/: libflext-pd_t.a.0.6.2
pd-linux/release-shared/: libflext-pd.so.0.6.2
pd-linux/release-single/: libflext-pd_s.a.0.6.2
